[package]
name = "actix-web-demo"
version = "0.1.0"
authors = ["Marco Antonio Muñiz Ochoa <marco.muniz.ochoa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0.219", features = ["derive"] }
