[package]
name = "actix-web-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-web = "4.9.0"
chrono = "0.4.38"
derive_more = { version = "1.0.0", features = ["full"] }
env_logger = "0.11.5"
log = "0.4.22"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
